# rita-1

./: CMakeLists.txt  INSTALL  Makefile  Makefile.am  Makefile.in  VERSION  buildRITA.sh  config.status  configure  configure.ac  install-rita.sh  install.sh  pack.sh  test_rita.sh
doc/: Makefile  Makefile.am  Makefile.in  index.html
doc/css/: Makefile  Makefile.in
doc/fonts/: Makefile  Makefile.in
doc/fonts/bootstrap/: Makefile  Makefile.in
doc/fonts/icomoon/: Makefile  Makefile.in
doc/images/: Makefile  Makefile.am  Makefile.in
doc/js/: Makefile  Makefile.in
doc/sass/: Makefile  Makefile.in
doc/sass/bootstrap/: Makefile  Makefile.in
doc/sass/bootstrap/mixins/: Makefile  Makefile.in
muparserx/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  mpTokenReader.cpp
src/: CMakeLists.txt  HVect.h  Makefile  Makefile.am  Makefile.in  approximation.cpp  approximation.h  calc.cpp  calc.h  cmd.cpp  cmd.h  config.h  config.h.in  configure.cpp  configure.h  data.cpp  data.h  eigen.cpp  eigen.h  equa.cpp  equa.h  help.h  integration.cpp  integration.h  main.cpp  mesh.cpp  mesh.h  optim.cpp  optim.h  rita.cpp  rita.h  ritaException.h  runAE.cpp  runODE.cpp  runPDE.cpp  solve.cpp  solve.h  stationary.cpp  stationary.h  transient.cpp  (+1 more)
tutorial/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
tutorial/ae/: CMakeLists.txt  Makefile  Makefile.in  example1.rita  example2.rita  example3.rita
tutorial/approximation/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  example1.rita  example2.rita
tutorial/calc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  example1.rita  example2.rita  example3.rita
tutorial/eigen/: CMakeLists.txt  Makefile  Makefile.in  README.md  example1.rita  example2.rita
tutorial/integration/: CMakeLists.txt  Makefile  Makefile.in  example1.rita  example2.rita
tutorial/ode/: CMakeLists.txt  Makefile  Makefile.in  example1.rita  example2.rita
tutorial/optim/: CMakeLists.txt  Makefile  Makefile.in  example1.rita  example2.rita  example3.rita  example4.rita
tutorial/pde/: CMakeLists.txt  Makefile  Makefile.in  ex4.m  example1.rita  example2.rita  example3.rita  example4.rita  example5.rita
