## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libmp.a
AUTOMAKE_OPTIONS = no-dependencies
AM_CPPFLAGS = -std=c++1y

mpdir = $(pkgincludedir)/muparserx

libmp_a_SOURCES = mpError.cpp \
                  mpOprtPostfixCommon.cpp \
                  mpFuncCmplx.cpp \
                  mpPackageCmplx.cpp \
                  mpFuncCommon.cpp \
                  mpPackageCommon.cpp \
                  mpFuncMatrix.cpp \
                  mpPackageMatrix.cpp \
                  mpFuncNonCmplx.cpp \
                  mpPackageNonCmplx.cpp \
                  mpFuncStr.cpp \
                  mpPackageStr.cpp \
                  mpICallback.cpp \
                  mpPackageUnit.cpp \
                  mpIOprt.cpp \
                  mpParser.cpp \
                  mpIPackage.cpp \
                  mpParserBase.cpp \
                  mpIToken.cpp \
                  mpParserMessageProvider.cpp \
                  mpIValReader.cpp \
                  mpRPN.cpp \
                  mpIValue.cpp \
                  mpScriptTokens.cpp \
                  mpIfThenElse.cpp \
                  mpTest.cpp \
                  mpOprtBinAssign.cpp \
                  mpTokenReader.cpp \
                  mpOprtBinCommon.cpp \
                  mpValReader.cpp \
                  mpOprtCmplx.cpp \
                  mpValue.cpp \
                  mpOprtIndex.cpp \
                  mpValueCache.cpp \
                  mpOprtMatrix.cpp \
                  mpVariable.cpp \
                  mpOprtNonCmplx.cpp

mp_HEADERS = mpCompat.h \
             mpOprtNonCmplx.h \
             mpDefines.h \
             mpOprtPostfixCommon.h \
             mpError.h \
             mpPackageCmplx.h \
             mpFuncCmplx.h \
             mpPackageCommon.h \
             mpFuncCommon.h \
             mpPackageMatrix.h \
             mpFuncMatrix.h \
             mpPackageNonCmplx.h \
             mpFuncNonCmplx.h \
             mpPackageStr.h \
             mpFuncStr.h \
             mpPackageUnit.h \
             mpFwdDecl.h \
             mpParser.h \
             mpICallback.h \
             mpParserBase.h \
             mpIOprt.h \
             mpParserMessageProvider.h \
             mpIPackage.h \
             mpRPN.h \
             mpIPrecedence.h \
             mpScriptTokens.h \
             mpIToken.h \
             mpStack.h \
             mpIValReader.h \
             mpTest.h \
             mpIValue.h \
             mpTokenReader.h \
             mpIfThenElse.h \
             mpTypes.h \
             mpMatrix.h \
             mpValReader.h \
             mpMatrixError.h \
             mpValue.h \
             mpOprtBinAssign.h \
             mpValueCache.h \
             mpOprtBinCommon.h \
             mpVariable.h \
             mpOprtCmplx.h \
             suSortPred.h \
             mpOprtIndex.h \
             suStringTokens.h \
             mpOprtMatrix.h \
             utGeneric.h
