
MAINTAINERCLEANFILES = Makefile.in

tutorialAPPROXdir = $(datadir)/rita/tutorial/approximation

tutorialAPPROX_DATA = README \
                      example1.rita \
                      example2.rita \
                      ex1.dat \
                      ex2.dat

dist_tutorialAPPROX_DATA = README \
                           example1.rita \
                           example2.rita \
                           ex1.dat \
                           ex2.dat

clean-local:
	-rm -f .rita.his .rita.log

