
MAINTAINERCLEANFILES = Makefile.in

tutorialCALCdir = $(datadir)/rita/tutorial/calc

tutorialCALC_DATA = README \
                    example1.rita \
                    example2.rita

dist_tutorialCALC_DATA = README \
                         example1.rita \
                         example2.rita

clean-local:
	-rm -f .rita.log .rita.his *.sol *.m

